# portfolio

./: .dockerignore  .gitignore  Makefile  TODO.md  application.Dockerfile  certbot-renew.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  manage.py  nginx-reload.sh  pyproject.toml
core/: models.py  urls.py  views.py
core/management/commands/: createadmin.py
core/migrations/: 0001_initial.py
core/templatetags/: markdown_extras.py
nginx/: django.conf
portfolio/: settings.py  wsgi.py
templates/: base.html
templates/core/: about.html  home.html  post_detail.html  todo.html
templates/partials/: footer.html  header.html
